Fix some z-index issues
Fix for #1233....
Work done:
-change the tmpl day, for render the hour panel before than the events.
-change the calendar.css, removed the z-index for the hour panel, and
add a position relative for day-event
-Same that last point on less.

That not should doing any visual change, only fixes some z-indexs issues
for particular layouts

--- a/less/day.less
+++ b/less/day.less
@@ -26,9 +26,9 @@
     position: absolute;
     width: 100%;
     margin-left: -60px;
-    z-index: -1;
   }
   .day-event {
+    position: relative;
     max-width: 200px;
     overflow: hidden;
   }
